<resources>
    <string name="app_name">Budgtey</string>
    <string name="new_transaction">New transaction</string>
    <string name="budget">Budget</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="amount">Amount</string>
    <string name="money_hint">00.00</string>
    <string name="when">When</string>
    <string name="today">Today</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="note_hint">Ex: Fries</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="food">Food</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about">About</string>
    <string name="save_transaction">Save transaction</string>
    <string name="spends_by_category">Spends by category</string>
    <string name="date_hint">19th Jul</string>
    <string name="day_hint">Wed</string>
    <string name="recent_transactions">Recent transactions</string>

    <string-array name="category_entries">
        <item>Food</item>
        <item>Transport</item>
        <item>MakeUp</item>
        <item>Debt</item>
        <item>Books</item>
        <item>Data</item>

    </string-array>
</resources>