<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.grace.budgtey.views.editTransaction.EditTransactionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.editTransaction.EditTransactionFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/edit_transaction_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/save_edit_transaction_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/card_view"
                app:layout_anchorGravity="end|bottom"
                android:layout_margin="16dp"
                android:background="@color/turquoise"
                android:contentDescription="@string/edit_transaction"
                android:src="@drawable/save" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="100dp"
                android:layout_gravity="top"
                android:elevation="8dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/note_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:text="@={viewModel.transactionEntityMutableLiveData.note}"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:importantForAutofill="no"
                        android:inputType="text" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/category"
                            android:textSize="16sp"
                            android:textColor="@color/black" />

                        <Spinner
                            android:id="@+id/category_edit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:entries="@{viewModel.categoryEntries}"
                            android:textSize="18sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/amount"
                            android:textSize="16sp"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/amount_edit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="@string/money_hint"
                            android:text="@={viewModel.transactionEntityMutableLiveData.stringAmount}"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:importantForAutofill="no"
                            android:inputType="number" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/when"
                            android:textSize="16sp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/date_edit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@={viewModel.transactionEntityMutableLiveData.date}"
                            android:textSize="18sp"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>