<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        
        <variable
            name="viewModel"
            type="com.grace.budgtey.views.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.home.HomeFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/turquoise"
                app:menu="@menu/home_menu"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme">

                <Button
                    android:id="@+id/month_and_year_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:pointerIcon="vertical_double_arrow"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/today"
                    android:gravity="start"/>

            </androidx.appcompat.widget.Toolbar>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="top"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@color/turquoise">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/money_card_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        app:contentPadding="15dp"
                        app:cardCornerRadius="5dp"
                        android:elevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:baselineAligned="false">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/budget" />

                                <TextView
                                    android:id="@+id/budget_home"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@={viewModel.moneyModelMutableLiveData.budget}"
                                    android:textColor="@color/black"
                                    android:textSize="16sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/expenses" />

                                <TextView
                                    android:id="@+id/expenses_home"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@={viewModel.moneyModelMutableLiveData.expenses}"
                                    android:textColor="@color/black"
                                    android:textSize="20sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/balance" />

                                <TextView
                                    android:id="@+id/balance_home"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@={viewModel.moneyModelMutableLiveData.balance}"
                                    android:textColor="@color/black"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_transactions"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/space_cadet"
                    android:letterSpacing="0.12"
                    android:textSize="16sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_transactions_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/new_transaction_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/turquoise"
                android:contentDescription="@string/new_transaction"
                android:src="@android:drawable/ic_input_add"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>